# eptr2

./: .env.example  .gitignore  404.html  AGENTS.md  AGENT_GUIDE.md  AI_AGENT_INTEGRATION_SUMMARY.md  CHANGELOG.md  CHANGELOG_MCP.md  CLAUDE_SETUP.md  PR_DESCRIPTION.md  QUICK_REFERENCE.md  README.md  TESTING_COSTS.md  TESTING_GUIDE.md  add_test_markers.py  conftest.py  eptr2_api_schema.json  index.html  latest  mcp-config.json  mkdocs.yml  monitor_tests.py  objects.inv  pyproject.toml  pytest.ini  sitemap.xml  versions.json
.claude/skills/eptr2-api-discovery/: SKILL.md  endpoint-categories.md
.claude/skills/eptr2-consumption-data/: SKILL.md  examples.md
.claude/skills/eptr2-convenience-wrappers/: SKILL.md
.claude/skills/eptr2-generation-tracking/: SKILL.md  examples.md
.claude/skills/eptr2-imbalance-costs/: SKILL.md  examples.md  formulas.md
.claude/skills/eptr2-market-operations/: SKILL.md  examples.md
.claude/skills/eptr2-price-analysis/: SKILL.md  api-reference.md  examples.md
.github/workflows/: changelog.yml  docs.yml  quality.yml
1.3.8/: 404.html  index.html  sitemap.xml
1.3.8.dev0/: 404.html  index.html  objects.inv  sitemap.xml
1.3.8.dev0/CONTRIBUTING/: index.html
1.3.8.dev0/assets/: index.html
1.3.8/CONTRIBUTING/: index.html
1.3.8/assets/: index.html
1.3.8/search/: search_index.json
1.3.8/stylesheets/: extra.css
CONTRIBUTING/: index.html
ai-integration/agent-skills/: index.html
ai-integration/claude-desktop/: index.html
ai-integration/mcp-server/: index.html
api/composite/: index.html
api/eptr2/: index.html
api/main/: index.html
api/mcp/: index.html
api/util/: index.html
assets/: index.html
creds/: eptr_credentials.json
docs/: CONTRIBUTING.md  index.md
docs/ai-integration/: agent-skills.md  claude-desktop.md  mcp-server.md
docs/api/: calls.md  composite.md  eptr2.md  main.md  mcp.md  util.md
docs/assets/: README.md
docs/getting-started/: authentication.md  installation.md  quickstart.md
docs/includes/: abbreviations.md
docs/reference/: abbreviations.md  changelog.md  contributing.md
docs/tutorials/: calculator.md  demo-app.md
docs/user-guide/: api-calls.md  basic-usage.md  composite-functions.md  convenience-wrappers.md  dataframes.md
eptr2/: __init__.py  main.py
eptr2/composite/: __init__.py  bpm.py  consumption.py  dabi.py  dabi_idm.py  idm_log.py  imbalance.py  mms.py  plant_costs.py  price_and_cost.py  production.py  production_plan.py
eptr2/mapping/: __init__.py  checks.py  help.py  method.py  parameters.py  path.py  processing.py
eptr2/processing/: __init__.py
eptr2/tutorials/: __init__.py  demo.py  main.py
eptr2/util/: certificate.py  costs.py  time.py
examples/: README.md  basic_usage.py  composite_ancillary.py  convenience_wrappers.py  cost_functions.py  diff_costs_example.py  generation_example.py  id_df_example.py  mcp_server_example.py  portfolio_costs.py  portfolio_costs_example.py
getting-started/authentication/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
includes/abbreviations/: index.html
reference/abbreviations/: index.html
reference/changelog/: index.html
reference/contributing/: index.html
scripts/: generate_call_wrappers.py  generate_changelog.py
search/: search_index.json
src/eptr2/: __init__.py  main.py
tests/: __init__.py  conftest.py  test_call_wrappers.py  test_costs.py  test_mcp_server.py  test_rate_limiter.py
tests/composite/: test_bpm.py  test_consumption.py  test_dabi_idm.py  test_idm_log.py  test_ids.py  test_mms.py  test_plant_costs.py  test_price_and_cost.py  test_production.py
tutorials/: .gitignore  README.md  calc.py  main.py  pyproject.toml
tutorials/calculator/: index.html
tutorials/composite/pages/: 4_💰_Fiyat_ve_Maliyetler.py
tutorials/demo-app/: index.html
tutorials/eptr2_tutorials/: __init__.py  calc.py  demo.py  main.py
tutorials/eptr2_tutorials/composite/: Ana_Sayfa.py  __init__.py  common.py
tutorials/eptr2_tutorials/composite/pages/: 1_Demo.py  2_Pozisyonlar.py  3_Uretim_Planlama.py  4_Fiyat_ve_Maliyetler.py  5_Santral_Dengesizlik.py  6_Yeni_Dengesizlik_Hesabi.py
user-guide/api-calls/: index.html
user-guide/basic-usage/: index.html
user-guide/composite-functions/: index.html
user-guide/dataframes/: index.html
(+111 files in other folders)
