[project]
name = "eptr2"
version = "1.3.2.dev0"
description = "EPIAS Transparency Platform v2.0 Python client by Robokami Data"
authors = [{ name = "Tideseed", email = "info@tideseed.com" }]
license = { text = "Apache License 2.0" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["urllib3==2.6.0", "pytz>=2024.1"]

[project.optional-dependencies]
dataframe = ["pandas>=2.1.3"]
mcp = ["pandas>=2.1.3", "fastmcp>=0.2.0"]
allextras = [
    "pandas>=2.1.3",
    "streamlit>=1.50.0",
    "tornado>=6.5.0",
    "requests>=2.32.4",
    "fastmcp>=0.2.0",

]
dev = ["pytest>=7.4.0"]

[project.scripts]
eptr2demo = "eptr2.tutorials:run_composite_app"
eptr2-mcp-server = "eptr2.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pytest>=7.4.0", "python-dotenv>=1.1.1"]

[tool.hatch.build]
include = [
    "/src",
    "src/eptr2",
    "README.md",
    "LICENSE",
    "pyproject.toml",
    "/src/eptr2/**",
]


[tool.hatch.build.targets.wheel]
packages = ["src/eptr2"]
