[project]
name = "eptr2"
version = "1.3.5.dev2"
description = "EPIAS Transparency Platform v2.0 Python client by Robokami / Tideseed"
authors = [{ name = "Tideseed", email = "info@tideseed.com" }]
license = { text = "Apache License 2.0" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["urllib3>=2.6.3", "pytz>=2024.1"]

[project.optional-dependencies]
dataframe = ["pandas>=2.1.3"]
mcp = ["pandas>=2.1.3", "fastmcp>=2.14.4"]
allextras = ["pandas>=2.1.3", "fastmcp>=2.14.4"]
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-autorefs>=0.5.0",
]
dev = ["pytest>=7.4.0"]

[project.scripts]
eptr2-mcp-server = "eptr2.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pytest>=7.4.0", "python-dotenv>=1.1.1"]

[tool.ruff.lint]
ignore = ["E741"]

[tool.hatch.build]
include = ["src/eptr2/**", "README.md", "LICENSE", "pyproject.toml"]

[tool.hatch.build.targets.wheel]
packages = ["src/eptr2"]

[dependency-groups]
docs = [
    "mkdocs-autorefs>=1.4.3",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.0",
]
