[project]
name = "eptr2-tutorials"
version = "1.3.4.dev0"
description = "Streamlit tutorials and demos for EPTR2 - Turkish electricity market data"
authors = [{ name = "Tideseed", email = "info@tideseed.com" }]
license = { text = "Apache License 2.0" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["eptr2>=1.3.0", "streamlit>=1.50.0", "pandas>=2.1.3"]

[project.scripts]
eptr2demo = "eptr2_tutorials:run_composite_app"
eptr2-demo = "eptr2_tutorials:run_demo_app"
eptr2-calc = "eptr2_tutorials:run_calc_app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eptr2_tutorials"]
